added getAllAtRisk
